[gd_scene load_steps=10 format=3 uid="uid://b75odrqp86sxp"]

[ext_resource type="Script" path="res://Scene/Main Menu.gd" id="1_tgui0"]
[ext_resource type="Texture2D" uid="uid://dxjt6pty0dw5r" path="res://Free/Background/Yellow.png" id="2_2d2og"]
[ext_resource type="FontFile" uid="uid://b4nrpb124t46w" path="res://04B_30__.TTF" id="2_3iutt"]
[ext_resource type="Texture2D" uid="uid://ir42lemlc04e" path="res://Free/Menu/Buttons/Play.png" id="4_6x4os"]
[ext_resource type="Texture2D" uid="uid://c3kp47ww0xh7g" path="res://Free/Menu/Buttons/Play_hover.png" id="5_b4cu1"]
[ext_resource type="Texture2D" uid="uid://m4pv8hkd0eks" path="res://Free/Menu/Buttons/Levels.png" id="6_vwipv"]
[ext_resource type="Texture2D" uid="uid://hqkjrgi6bjix" path="res://Free/Menu/Buttons/Levels_hover.png" id="7_mgj6i"]
[ext_resource type="Texture2D" uid="uid://ciab3nsa68iab" path="res://Free/Menu/Buttons/Close.png" id="8_vjfjl"]
[ext_resource type="Texture2D" uid="uid://cow4nltg2dqat" path="res://Free/Menu/Buttons/Close_hover.png" id="9_s1sb3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tgui0")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_right = 1629.0
offset_bottom = 781.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(581, 336)
texture = ExtResource("2_2d2og")
stretch_mode = 1

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
offset_left = 252.0
offset_top = 170.0
offset_right = 882.0
offset_bottom = 221.0
theme_override_fonts/font = ExtResource("2_3iutt")
theme_override_font_sizes/font_size = 50
text = "Platformer Game"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 388.0
offset_top = 358.0
offset_right = 716.0
offset_bottom = 488.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.036
anchor_top = 0.086
anchor_right = 0.036
anchor_bottom = 0.086
offset_left = -11.808
offset_top = -13.674
offset_right = 9.192
offset_bottom = 8.326
scale = Vector2(5.5, 5.5)
pivot_offset = Vector2(10.1893, 10.4147)
texture_normal = ExtResource("4_6x4os")
texture_hover = ExtResource("5_b4cu1")

[node name="LevelSelect" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.968
anchor_top = 0.117
anchor_right = 0.968
anchor_bottom = 0.117
offset_left = -9.50403
offset_top = -12.21
offset_right = 11.496
offset_bottom = 9.79
grow_horizontal = 0
scale = Vector2(5.5, 5.5)
pivot_offset = Vector2(10.7273, 10.7273)
texture_normal = ExtResource("6_vwipv")
texture_hover = ExtResource("7_mgj6i")

[node name="Quit" type="TextureButton" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.499
anchor_top = 0.963
anchor_right = 0.5
anchor_bottom = 0.963
offset_left = -7.172
offset_top = -10.117
offset_right = 7.5
offset_bottom = 5.883
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(7.5, 7.5)
pivot_offset = Vector2(7.53333, 7.66666)
texture_normal = ExtResource("8_vjfjl")
texture_hover = ExtResource("9_s1sb3")

[connection signal="button_down" from="Control/Start" to="." method="_on_start_button_down"]
[connection signal="button_up" from="Control/Start" to="." method="_on_start_button_up"]
[connection signal="pressed" from="Control/Start" to="." method="_on_start_pressed"]
[connection signal="button_down" from="Control/LevelSelect" to="." method="_on_level_select_button_down"]
[connection signal="button_up" from="Control/LevelSelect" to="." method="_on_level_select_button_up"]
[connection signal="pressed" from="Control/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="button_down" from="Control/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_up" from="Control/Quit" to="." method="_on_quit_button_up"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
